<resources>
    <string name="app_name">SimpleCalculator</string>
    <string name="btn_01">1</string>
    <string name="btn_02">2</string>
    <string name="btn_03">3</string>
    <string name="btn_Plus">+</string>
    <string name="btn_04">4</string>
    <string name="btn_05">5</string>
    <string name="btn_06">6</string>
    <string name="btn_Minus">-</string>
    <string name="btn_07">7</string>
    <string name="btn_08">8</string>
    <string name="btn_09">9</string>
    <string name="btn_Divide">/</string>
    <string name="btn_Clear">C</string>
    <string name="btn_00">0</string>
    <string name="btn_Dot">.</string>
    <string name="btn_Multipy">*</string>
    <string name="btn_Result">=</string>
</resources>
